# crust

./: Cargo.toml  build.rs
proto/: action.proto  animation.proto  config.proto  crust.proto  event.proto  events.proto  primitives.proto  scene_node.proto  trust.proto  user_input.proto
src/: crust_api.rs  demo.rs  lib.rs  status.rs
src/action/: animations.rs  collisions.rs  events.rs  executor.rs  index.rs  mod.rs  nodes.rs  queue.rs  scenes.rs  scrolling.rs
src/animation/: animated.rs  animator.rs  frame_list.rs  frame_range.rs  mod.rs  performer.rs  progressor.rs  rotation.rs  scaling.rs  script_runner.rs  testing.rs  timer.rs  translation.rs
src/components/: animation.rs  collision.rs  mod.rs  scrollilng.rs  sprites.rs
src/core/: core.rs  events.rs  fps.rs  mod.rs  renderer.rs  resources.rs  scene_builder.rs  scene_manager.rs  status.rs  texture.rs  trust.rs  trust_core.rs  trust_extern.rs
src/event/: manager.rs  mod.rs
src/input/: handler.rs  mod.rs
src/physics/: collisions.rs  mod.rs
src/resources/: manager.rs  manager_annotation.rs  mod.rs  sprite_sheets.rs  sprites.rs  texture.rs  tiles.rs  viewport.rs
src/scene/: mod.rs  scene.rs  scene_builder.rs  scene_manager.rs
src/sdl/: canvas.rs  events.rs  mod.rs  sdl.rs  texture.rs
src/systems/: animator.rs  animators.rs  collisions.rs  keyboard.rs  mod.rs  movement.rs  renderer.rs  rigid.rs  scripts.rs  scrolling.rs
