[package]
name = "crust"
version = "0.1.0"
edition = "2021"

[lib]
name = "crust_lib"
crate-type = ["cdylib"]

[dependencies]
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
specs = { version = "0.17", features = ["shred-derive"] }
specs-derive = "0.4"
tonic = "0.7"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","gfx","mixer","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
branch = "master"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[build-dependencies]
tonic-build = "0.7"
